<resources>
    <string name="app_name">Quiz App</string>
    <string name="sport_quiz">SPORT QUIZ</string>
    <string name="_4_in_what_year_did_roman_abramovich_take_over_chelsea">4. In what year did Roman Abramovich take over Chelsea?</string>
    <string name="_3_which_of_the_following_clubs_has_never_been_relegated_from_the_english_premier_league">3. Which of the following clubs has never been relegated from the English Premier League?</string>
    <string name="didier_drogba">Didier Drogba</string>
    <string name="_5_who_is_the_fastest_man_in_the_world">5. Who is the fastest man in the world?</string>
    <string name="usain_bolt">Usain Bolt</string>
    <string name="justin_gatlin">Justin Gatlin</string>
    <string name="yohan_blake">Yohan Blake</string>
    <string name="submit">Submit</string>
    <string name="_1_on_being_told_his_next_opponent_chuck_wepner_was_another_great_white_hope_which_boxer_replied_quot_that_s_the_only_hope_he_s_got_quot">1. On being told his next opponent, Chuck Wepner, was another great white hope, which boxer replied: \"That\'s the only hope he\'s got.\"?</string>
    <string name="cristiano_ronaldo">Cristiano Ronaldo</string>
    <string name="lionel_messi">Lionel Messi</string>
    <string name="_2_which_of_the_following_palyers_have_scored_hatrick_in_the_spanish_la_liga_el_classico">2. Which of the following palyers have scored hatrick in the Spanish La Liga El-Classico?</string>
    <string name="joe_fraizer">Joe Fraizer</string>
    <string name="muhammad_ali">Muhammad Ali</string>
    <string name="mike_tyson">Mike Tyson</string>
    <string name="chelsea">Chelsea</string>
    <string name="liverpool">Liverpool</string>
    <string name="arsenal">Arsenal</string>
</resources>
